--- a/my_venv/pyvenv.cfg
+++ b/my_venv/pyvenv.cfg
@@ -1,5 +1,3 @@
-home = C:\Users\xavie\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0
+home = /opt/anaconda3/bin
 include-system-site-packages = false
-version = 3.12.5
-executable = C:\Users\xavie\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\python.exe
-command = C:\Users\xavie\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\python.exe -m venv C:\MY OWN PROJECTS\.hack_hackathon\ScammmerScanner\.venv
+version = 3.9.13
