--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,55 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# React
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+frontend/react-project/node_modules
+frontend/react-project/.pnp
+frontend/react-project/.pnp.js
+
+# testing
+frontend/react-project/coverage
+
+# production
+frontend/react-project/build
+
+# misc
+frontend/react-project/.DS_Store
+frontend/react-project/.env.local
+frontend/react-project/.env.development.local
+frontend/react-project/.env.test.local
+frontend/react-project/.env.production.local
+
+# Logs
+frontend/react-project/logs
+frontend/react-project/*.log
+frontend/react-project/npm-debug.log*
+frontend/react-project/yarn-debug.log*
+frontend/react-project/yarn-error.log*
+frontend/react-project/pnpm-debug.log*
+
+# Editor directories and files
+frontend/react-project/.vscode/
+frontend/react-project/.idea/
+frontend/react-project/*.suo
+frontend/react-project/*.ntvs*
+frontend/react-project/*.njsproj
+frontend/react-project/*.sln
+frontend/react-project/*.sw?
+
+# TypeScript
+frontend/react-project/*.tsbuildinfo
+
+# Mac system files
+frontend/react-project/.DS_Store
+
+# Linux system files
+frontend/react-project/*~
+
+# Windows system files
+frontend/react-project/Thumbs.db
+
